# rustview

./: .gitignore  Cargo.toml
docs/: configuration.md
examples/: counter.rs  dashboard.rs  showcase.rs
rustview-macros/: Cargo.toml
src/server/: mod.rs
src/session/: mod.rs
src/widgets/: mod.rs
