[package]
name = "rustview-macros"
version = "0.1.7"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Proc-macros for RustView (#[cached], #[rustview::app])"
repository = "https://github.com/EdgeTypE/rustview"
homepage = "https://github.com/EdgeTypE/rustview"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
